Fix font size on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -269,6 +269,17 @@ h6 {
   color: var(--color-text-green);
 }
 
+@media (max-width: 700px) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-size: 95%;
+  }
+}
+
 /*============================================================*\
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
